--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     localStorage.removeItem('score');
     updateScoreElement();
   ">Reset Score</button>
-      <button class="auto-play-btn">Auto Play</button>
+      <button class="auto-play-btn" onclick="autoPlay()">Auto Play</button>
     </div>
   </main>
 
