replaced 'rock', 'paper', 'scissors' with their respective emojis

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
     <div class="moves-div">
       <button class="rock-btn move-btn" onclick="
-    playGame('rock');
+    playGame('✊');
   ">✊</button>
       <button class="Paper-btn move-btn" onclick="
-    playGame('paper');
+    playGame('✋');
   ">✋</button>
       <button class="scissors-btn move-btn" onclick="
-    playGame('scissors');
+    playGame('✌️');
   ">✌️</button>
     </div>
 
