changed back to the 'rock' 'paper' 'scissors' word from emojis

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
     <div class="moves-div">
       <button class="rock-btn move-btn" onclick="
-    playGame('✊');
+    playGame('rock');
   ">✊</button>
       <button class="Paper-btn move-btn" onclick="
-    playGame('✋');
+    playGame('paper');
   ">✋</button>
       <button class="scissors-btn move-btn" onclick="
-    playGame('✌️');
+    playGame('scissors');
   ">✌️</button>
     </div>
 
