replaced onclick's in mopve buttons in html with addEventListeners in JavaScript

--- a/index.html
+++ b/index.html
@@ -24,15 +24,9 @@
     </div>
 
     <div class="moves-div">
-      <button class="rock-btn move-btn" onclick="
-    playGame('rock');
-  ">✊</button>
-      <button class="Paper-btn move-btn" onclick="
-    playGame('paper');
-  ">✋</button>
-      <button class="scissors-btn move-btn" onclick="
-    playGame('scissors');
-  ">✌️</button>
+      <button class="rock-btn move-btn js-rock-btn">✊</button>
+      <button class="Paper-btn move-btn js-paper-btn">✋</button>
+      <button class="scissors-btn move-btn js-scissors-btn">✌️</button>
     </div>
 
     <div class="bottom-btns">
