--- a/index.html
+++ b/index.html
@@ -30,13 +30,9 @@
     </div>
 
     <div class="bottom-btns">
-      <button class="reset-score-btn" onclick="
-    score.wins = 0;
-    score.losses = 0;
-    score.ties = 0;
-    localStorage.removeItem('score');
-    updateScoreElement();
-  ">Reset Score</button>
+      <button class="reset-score-btn js-reset-score-btn">
+        Reset Score
+      </button>
       <button class="auto-play-btn" onclick="autoPlay()">Auto Play</button>
     </div>
   </main>
