--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       <button class="reset-score-btn js-reset-score-btn">
         Reset Score
       </button>
-      <button class="auto-play-btn" onclick="autoPlay()">Auto Play</button>
+      <button class="auto-play-btn js-auto-play-btn">
+        Auto Play
+      </button>
     </div>
   </main>
 
